--- a/docs/system/terminal-use/p3.md
+++ b/docs/system/terminal-use/p3.md
@@ -1,6 +1,6 @@
 # 问
 1. exec()系统调用有什么特点？  
-2. 
+2. 什么是僵尸进程？什么是
 # 答
 1. 给定可执行程序的名称以及需要的参数后，exec()会从可执行程序中加载代码和静态数据，并用它覆盖自己的代码段（以及静态数据），堆、栈以及其他内存空间也会被重新初始化。
 换句话说，exec()并没有创建新进程，而是将当前运行的程序替换成不同的程序。并且exec()调用成功永远不会返回。
@@ -74,4 +74,26 @@
     hello, I am child!
    ```
    **都可以访问，但先输入父进程的内容再输入子进程的内容。原因可能是当父进程访问该文件描述符时会上锁，导致子进程等候访问。**  
-3. 
+3. 使用fork()编写另一个程序。子进程应打印“hello”，父进程应打印“goodbye”。你应该尝试确保子进程始终先打印。你能否不在父进程调用wait()而做到这一点呢？  
+   ```c
+    #include <stdio.h>
+    #include <stdlib.h>
+    #include <unistd.h>
+    #include <string.h>
+    #include <fcntl.h>
+    int main(int argc, char *argv[]){
+        int rc = vfork();
+        if (rc<0){
+            fprintf(stderr, "fork failed\n");
+            exit(1);
+        }else if(rc==0){
+            printf("hello\n");
+            exit(0);
+        }else {
+            printf("goodbye\n");
+        }
+        return 0;
+    }
+   ```
+   **上面的程序利用了vfork()的特性来实现先打印子进程再打印父进程。vfork的特性有：1.子进程与父进程共享内存空间；2.vfork得到的子进程保证在调用exit或exec之前，父进程都不会执行。**
+4. 编写一个调用fork()的程序，然后调用某种形式的exec()来运行程序/bin/ls。看看是否可以尝试exec()的所有变体，包括execl()、execle()、execlp()、execv()、execvp()和execvP()。为什么同样的基本调用会有这么多变种？
