--- a/docs/system/terminal-use/p3.md
+++ b/docs/system/terminal-use/p3.md
@@ -97,3 +97,20 @@
    ```
    **上面的程序利用了vfork()的特性来实现先打印子进程再打印父进程。vfork的特性有：1.子进程与父进程共享内存空间；2.vfork得到的子进程保证在调用exit或exec之前，父进程都不会执行。**
 4. 编写一个调用fork()的程序，然后调用某种形式的exec()来运行程序/bin/ls。看看是否可以尝试exec()的所有变体，包括execl()、execle()、execlp()、execv()、execvp()和execvP()。为什么同样的基本调用会有这么多变种？
+   ```c
+    int execlp(const char *file, const char *argc,...);
+    //参数1：要执行可执行文件的名字，路径默认从path中寻找，当path所有目录搜索后没有参数1则出错返回
+    //参数2：argc[0]也为可执行文件名，后面为命令参数
+    //最后必须用NULL结束
+    //一般调用系统程序，如：ls,date,cp,cat等命令
+    execlp("ls","ls","-h",NULL);
+   ```
+   ```c
+    int execl(const char *path, const char *arg,...);
+    execl("/bin/ls","ls","-l",NULL);
+    //使用参数1给出的绝对路径搜索
+   ```
+   其它的都大同小异。
+5. 现在编写一个程序，在父进程中使用wait()，等待子进程完成。wait()返回什么？如果你在子进程中使用wait()会发生什么？  
+   **返回子进程pid，**
+6. 
