完成第五章内容

--- a/docs/system/terminal-use/p3.md
+++ b/docs/system/terminal-use/p3.md
@@ -1,9 +1,18 @@
 # 问
 1. exec()系统调用有什么特点？  
-2. 什么是僵尸进程？什么是
+2. 什么是僵尸进程？什么是孤儿进程？  
+3. pipe管道的特性？  
+
+4. 
 # 答
-1. 给定可执行程序的名称以及需要的参数后，exec()会从可执行程序中加载代码和静态数据，并用它覆盖自己的代码段（以及静态数据），堆、栈以及其他内存空间也会被重新初始化。
-换句话说，exec()并没有创建新进程，而是将当前运行的程序替换成不同的程序。并且exec()调用成功永远不会返回。
+1. 给定可执行程序的名称以及需要的参数后，exec()会从可执行程序中加载代码和静态数据，并用它覆盖自己的代码段（以及静态数据），堆、栈以及其他内存空间也会被重新初始化。  
+换句话说，exec()并没有创建新进程，而是将当前运行的程序替换成不同的程序。并且exec()调用成功永远不会返回。  
+2. 僵尸进程就是当子进程exit()退出之后，它的父进程没有通过wait()系统调用回收他的进程描述符的信息，导致进程会继续停留在系统的进程表中，占用内核资源；孤儿进程就是父进程突然退出，子进程继续执行。孤儿进程会被init进程所收养，并由init进程对它们完成状态收集工作。  
+3.    
+   * 管道是半双工的，数据只能从一个方向流动。需要双方通信时需要建立两个管道。  
+   * 管道分普通管道和命名管道。普通管道位于内存，只能用于父子进程或者兄弟进程之间。命名管道位于文件系统，没有亲缘关系的进程间只要知道管道名也可以通讯。  
+   * 管道也是文件。管道大小为4096字节。  
+   * 管道满时，写阻塞；管道空时，读阻塞。  
 
 
 # 作业
@@ -112,5 +121,99 @@
    ```
    其它的都大同小异。
 5. 现在编写一个程序，在父进程中使用wait()，等待子进程完成。wait()返回什么？如果你在子进程中使用wait()会发生什么？  
-   **返回子进程pid，**
-6. 
+   ```c
+    int main(int argc,char *argv[]){
+        int rc = fork();
+        int status = 0;
+        int w = 0;
+        if (rc<0){
+            fprintf(stderr,"fork failed.\n");
+            exit(1);
+        } else if (rc == 0){
+            printf("i am child(%d)\n",getpid());
+            w = wait(&status);
+            printf("w:%d\n",w);
+        } else {
+            printf("i am father(%d)\n",getpid());
+            wait(&status);
+            printf("good bye.\n");
+        }
+        return 0;
+    }
+   ```
+   **返回子进程pid，在子进程调用会返回-1.**  
+6. 对前一个程序稍作修改，这次使用waitpid()而不是wait()。什么时候waitpid()会有用？  
+   **需要等待指定子程序完成的时候**  
+7. 编写一个创建子进程的程序，然后在子进程中关闭标准输出（STDOUT_FILENO）。如果子进程在关闭描述符后调用printf()打印输出，会发生什么？  
+   ```c
+    #include <stdio.h>
+    #include <stdlib.h>
+    #include <unistd.h>
+    #include <sys/wait.h>
+
+    int main(int argc,char *argv[]){
+        int rc = fork();
+        close(STDOUT_FILENO);
+        if (rc<0){
+            fprintf(stderr,"fork failed.\n");
+            exit(1);
+        } else if (rc == 0){
+            printf("i am child(%d)\n",getpid());
+        } else {
+        
+        }
+        return 0;
+    }
+   ```
+   **不会输出内容**  
+8. 编写一个程序，创建两个子进程，并使用pipe()系统调用，将一个子进程的标准输出连接到另一个子进程的标准输入。  
+   ```c
+    #include <stdio.h>
+    #include <stdlib.h>
+    #include <unistd.h>
+    #include <string.h>
+    #include <sys/wait.h>
+    void sys_err(const char *str){
+        perror(str);
+        exit(1);
+    }
+    int main(int argc,char *argv[]){
+        int fd[2];
+        char buf[1024];
+        char *p = "test for pipe\n";
+        int status = 0;
+        int ret = pipe(fd);
+        if (ret==-1)
+            sys_err("pipe");
+        pid_t rc1 = fork();
+        if (rc1<0){
+            fprintf(stderr,"rc1 fork failed.\n");
+            exit(1);
+        } else if (rc1 == 0){
+            //子程序1，关闭读端
+            close(fd[0]);
+            write(fd[1],p,strlen(p));
+            close(fd[1]);
+        } else {
+            //父程序
+            pid_t rc2 = fork();
+            if (rc2<0){
+                fprintf(stderr,"rc1 fork failed.\n");
+                exit(1);
+            } else if (rc2 == 0){
+                //子程序2，关闭写端
+                close(fd[1]);
+                int len = read(fd[0],buf,sizeof(buf));
+                printf("i am no.2!\n");
+                write(STDOUT_FILENO,buf,len);
+                close(fd[0]);
+            }else{
+                close(fd[0]);
+                close(fd[1]);
+                wait(&status);
+            }
+        }
+        return 0;
+    }
+   ```
+   
