--- a/docs/system/terminal-use/p3.md
+++ b/docs/system/terminal-use/p3.md
@@ -1,10 +1,11 @@
-# 问
+# 进程API
+## 问
 1. exec()系统调用有什么特点？  
 2. 什么是僵尸进程？什么是孤儿进程？  
 3. pipe管道的特性？  
 
 4. 
-# 答
+## 答
 1. 给定可执行程序的名称以及需要的参数后，exec()会从可执行程序中加载代码和静态数据，并用它覆盖自己的代码段（以及静态数据），堆、栈以及其他内存空间也会被重新初始化。  
 换句话说，exec()并没有创建新进程，而是将当前运行的程序替换成不同的程序。并且exec()调用成功永远不会返回。  
 2. 僵尸进程就是当子进程exit()退出之后，它的父进程没有通过wait()系统调用回收他的进程描述符的信息，导致进程会继续停留在系统的进程表中，占用内核资源；孤儿进程就是父进程突然退出，子进程继续执行。孤儿进程会被init进程所收养，并由init进程对它们完成状态收集工作。  
@@ -15,7 +16,7 @@
    * 管道满时，写阻塞；管道空时，读阻塞。  
 
 
-# 作业
+## 作业
 1. 编写一个调用fork()的程序。在调用fork()之前，让主进程访问一个变量（例如x）并将其值设置为某个值（例如100）。子进程中的变量有什么值？当子进程和父进程都改变x的值时，变量会发生什么？ 
    ```c
     #include <stdio.h>
