--- a/docs/system/terminal-use/p5.md
+++ b/docs/system/terminal-use/p5.md
@@ -20,3 +20,35 @@
 1. **先完成耗费时间长的任务，后完成耗费时间短的任务时。FIFO表现不好**  
 2. **SJF是在（工作必须保持运行到完成）的前提下，所以会有护航效应；而STCF会在新工作进入系统时，判断剩余工作和新工作中谁剩余时间最少，然后调度工作。**
 3. **时间片越短，RR在响应时间上表现越好；但上下文切换的成本将影响整体性能。**
+
+## 作业
+1. 使用SJF和FIFO调度程序运行长度为200的3个作业时，计算响应时间和周转时间。  
+    SJF:  
+    ```terminal
+    python ./scheduler.py -p SJF -l 200,200,200
+    ```
+    * response time = (200+400)/3 = 200  
+    * turnaround time = (200+400+600)/3 = 400
+    FIFO:  
+    ```terminal
+    python ./scheduler.py -p FIFO -l 200,200,200
+    ```
+    * response time = (200+400)/3 = 200  
+    * turnaround time = (200+400+600)/3 = 400  
+2. 现在做同样的事情，但有不同长度的作业，即100、200和300。  
+    SJF:  
+    ```terminal
+    python ./scheduler.py -p SJF -l 100,200,300
+    ```
+    * response time = (100+300)/3 = 133.3333  
+    * turnaround time = (100+300+600)/3 = 333.3333
+    FIFO:  
+    由于都是工作列都是由工作时间递增排序，所以和SJF策略的时间一样。  
+3. 现在做同样的事情，但采用RR调度程序，时间片为1。  
+    * response time = (0+1+2)/3 = 1
+    * turnaround time = ((199*3+1)+(199*3+2)+(199*3+3))/3 = 599
+4. 对于什么类型的工作负载，SJF提供与FIFO相同的周转时间？  
+5. 对于什么类型的工作负载和量子长度，SJF与RR提供相同的响应时间？  
+6. 随着工作长度的增加，SJF的响应时间会怎样？你能使用模拟程序来展示趋势吗？  
+7. 随着量子长度的增加，RR的响应时间会怎样？你能写出一个方程，计算给定N个工作时，最坏情况的响应时间吗？  
+    * RR的响应时间会增加p
