--- a/docs/system/terminal-use/15-机制：地址转换.md
+++ b/docs/system/terminal-use/15-机制：地址转换.md
@@ -2,7 +2,13 @@
 
 ## KeyPoint
 1. 介入技术：在虚拟内存中，硬件可以介入到每次内存访问中，将进程提供的虚拟地址转换为数据实际存储的物理地址。
+2. MMU（Memory Management Unit,内存管理单元）：CPU负责地址转换的部分。
+3. 
 
 ## 问
-1. 如何将
+1. 如何将进程的内存引用转换成物理地址？
+2. 
+
+
 ## 答
+1. 
