--- a/docs/system/terminal-use/15-机制：地址转换.md
+++ b/docs/system/terminal-use/15-机制：地址转换.md
@@ -3,7 +3,13 @@
 ## KeyPoint
 1. 介入技术：在虚拟内存中，硬件可以介入到每次内存访问中，将进程提供的虚拟地址转换为数据实际存储的物理地址。
 2. MMU（Memory Management Unit,内存管理单元）：CPU负责地址转换的部分。
-3. 
+3. 动态重定向的硬件支持：
+    1. 特权模式：需要，以防用户模式的进程执行特权操作。
+    2. 基址/界限寄存器：每个CPU需要一对寄存器来支持地址转换和界限检查
+    3. 能够转换虚拟地址并检查它是否越界：电路来完成转换和检查界限
+    4. 修改基址/界限寄存器的特权指令：在让用户程序运行之前，操作系统必须能够设置这些值
+    5. 注册异常处理程序的特权指令：操作系统必须能告诉硬件，如果异常发生，那么执行哪些代码
+    6. 能够触发异常：如果进程试图使用特权指令或越界的内存
 
 ## 问
 1. 如何将进程的内存引用转换成物理地址？
