--- a/docs/system/terminal-use/15-机制：地址转换.md
+++ b/docs/system/terminal-use/15-机制：地址转换.md
@@ -1,20 +1,30 @@
 # 15-机制：地址转换
 
 ## KeyPoint
+
 1. 介入技术：在虚拟内存中，硬件可以介入到每次内存访问中，将进程提供的虚拟地址转换为数据实际存储的物理地址。
 2. MMU（Memory Management Unit,内存管理单元）：CPU负责地址转换的部分。
 3. 动态重定向的硬件支持：
-    1. 特权模式：需要，以防用户模式的进程执行特权操作。
-    2. 基址/界限寄存器：每个CPU需要一对寄存器来支持地址转换和界限检查
-    3. 能够转换虚拟地址并检查它是否越界：电路来完成转换和检查界限
-    4. 修改基址/界限寄存器的特权指令：在让用户程序运行之前，操作系统必须能够设置这些值
-    5. 注册异常处理程序的特权指令：操作系统必须能告诉硬件，如果异常发生，那么执行哪些代码
-    6. 能够触发异常：如果进程试图使用特权指令或越界的内存
+   1. 特权模式：需要，以防用户模式的进程执行特权操作。
+   2. 基址/界限寄存器：每个CPU需要一对寄存器来支持地址转换和界限检查
+   3. 能够转换虚拟地址并检查它是否越界：电路来完成转换和检查界限
+   4. 修改基址/界限寄存器的特权指令：在让用户程序运行之前，操作系统必须能够设置这些值
+   5. 注册异常处理程序的特权指令：操作系统必须能告诉硬件，如果异常发生，那么执行哪些代码
+   6. 能够触发异常：如果进程试图使用特权指令或越界的内存
 
 ## 问
+
 1. 如何将进程的内存引用转换成物理地址？
 2. 
 
-
 ## 答
-1. 
+
+## 作业
+
+1. 用种子 1、2 和 3 运行，并计算进程生成的每个虚拟地址是处于界限内还是界限外? 如果在界限内，请计算地址转换。 
+    **有界限内也有界限外**
+2. 使用以下标志运行:-s 0 -n 10。为了确保所有生成的虚拟地址都处于边界内，要将 -l(界限寄存器)设置为什么值?  
+    **930**
+3. 使用以下标志运行:-s 1 -n 10 -l 100。可以设置界限的最大值是多少，以便地址空间 仍然完全放在物理内存中?  
+    **856**
+4. 
