梳理了目录，太久没更新了

--- a/docs/system/terminal-use/17-空闲空间管理.md
+++ b/docs/system/terminal-use/17-空闲空间管理.md
@@ -1,7 +1,20 @@
 # 17-空闲空间管理
 ## KeyPoint
+1. 最优匹配：首先遍历整个空闲列表，找到和请求大小一样或更大的空闲块，然后返回这其中最小的一个空闲块。
+    * 优点：实现简单。
+    * 缺点：遍历找出正确块时需要付出较大的性能代价。
+2. 最差匹配：与最优匹配相反，尝试找出最大的空闲块。分割满足用户需求后，将剩余的块加入空闲列表。
+    * 优点：实现简单
+    * 缺点：同样需要遍历，同时导致过量的碎片。
+3. 首次匹配：找到第一个足够大的块就返回。
+    * 优点：速度快，不需要遍历。
+    * 缺点：有时使得空闲列表开头部分有很多小块。
+4. 下次匹配：在首次匹配的基础上增加了指针指向上次查找结束的位置。
+    * 优点：避免对列表开头频繁的分割，同时避免遍历查找。
+5. 
 
 ## 问
+1. 如何管理空闲空间？
 
 ## 答
 
