--- a/docs/git/ProGit/1-起步.md
+++ b/docs/git/ProGit/1-起步.md
@@ -1,7 +1,33 @@
 # 1-起步
 
 ## KeyPoint
+* Git和其它版本控制系统的主要差别在于，Git只关心<font color=red>文件数据的整体是否发生变化</font>，而大多数其他系统则关心文件内容的具体差异。
+* <font color=red>Git中的大多数操作都只需要访问本地文件和资源，不同联网</font>
+* 所有保存在Git数据库的东西都是用<font color=red>哈希值</font>来作索引的，而不是靠文件名。
 
 ## Q&A
 * 版本控制有哪几种？
   * 本地化版本控制系统、集中化版本控制系统、分布式版本控制系统
+* 本地化版本控制系统有什么缺点？
+  * 无法让不同系统上的开发者协同工作。
+* 集中化版本控制系统有什么缺点？
+  * 遇上中央服务器单点故障，没有备份或备份不及时会有丢失历史更改记录的风险
+* 分布式版本控制系统的优势？
+  * 根据需要设定不同的协作流程，例如层次模型式工作流
+* Git三种状态的概念
+  * 已提交(Committed)
+    * 表示该文件已经被安全地保存在本地数据库中了
+  * 已修改(Modified)
+    * 表示修改了某个文件但还没提交保存
+  * 已暂存(staged)
+    * 表示已修改的文件放在下次提交时要保存的清单中了
+* `git diff`
+  * 此命令是比较工作目录中当前文件和暂存区域快照之间的差异，也就是修改之后还没有暂存起来的变化内容
+* 如何从Git仓库删除(从暂存区删除)，但仍然希望保留在当前工作目录中？
+  * `git rm --cached`
+* 提交完发现漏掉了几个文件没加，或者提交信息写错了，想撤销刚才的提交操作？
+  * `git commit --amend`
+* 如何添加远程仓库
+  * `git remote add [shortname] [url]`
+* `git pull`和`git fetch`之间的区别
+  * `git fetch`只是将远端的数据拉到本地仓库，并不自动合并到当前工作分支；而`git pull`会将远端分支自动合并到本地仓库中当前分支(前提是当前分支追踪)
