--- a/docs/git/ProGit/1-起步.md
+++ b/docs/git/ProGit/1-起步.md
@@ -4,6 +4,7 @@
 * Git和其它版本控制系统的主要差别在于，Git只关心<font color=red>文件数据的整体是否发生变化</font>，而大多数其他系统则关心文件内容的具体差异。
 * <font color=red>Git中的大多数操作都只需要访问本地文件和资源，不同联网</font>
 * 所有保存在Git数据库的东西都是用<font color=red>哈希值</font>来作索引的，而不是靠文件名。
+* Git使用的标签有两种类型：轻量级(lightweight)和含附注的(annotated)。
 
 ## Q&A
 * 版本控制有哪几种？
@@ -31,3 +32,5 @@
   * `git remote add [shortname] [url]`
 * `git pull`和`git fetch`之间的区别
   * `git fetch`只是将远端的数据拉到本地仓库，并不自动合并到当前工作分支；而`git pull`会将远端分支自动合并到本地仓库中当前分支(前提是当前分支追踪)
+* 轻量级标签和含附注标签有什么区别？
+  * 轻量级标签实际上就是个指向特定提交对象的引用；而含附注标签，实际上时存储在仓库的一个独立对象，它有自身的校验和信息，包含着标签的名字，电子邮件地址和日期，以及标签说明。
